--- a/src/Component/LEDTime.css
+++ b/src/Component/LEDTime.css
@@ -1,31 +1,6 @@
-.led-time {
-    display: flex;
-    gap: 0.2rem;
-    font-size: 1rem;
+.led-digit{
     font-weight: bold;
-    color: #000;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-  }
-  
-  .led-digit {
-    width: 0.5rem;
-    height: 1rem;
-    border-radius: 0.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .led-separator {
-    width: 0.5rem;
-    height: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1rem;
-  }
-
-  .led-date{
-    margin-left:30px;
-  }
+    font-size: 15px;
+    padding: 10px;
+    margin-left:25px
+}
